rebase, revisions to start up behaviour, make recent health integration test function work with orchestrator state for health probe
